--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/libft"]
-	path = lib/libft
-	url = https://github.com/f-ras-42Cursus/libft
+[submodule "libft-extended"]
+	path = libft-extended
+	url = https://github.com/f-ras-42Cursus-EXTRAS/libft-extended.git
