--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libft-extended"]
-	path = libft-extended
+[submodule "lib/libft-extended"]
+	path = lib/libft-extended
 	url = https://github.com/f-ras-42Cursus-EXTRAS/libft-extended.git
